--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,3 +28,5 @@ dependencies {
     compile 'com.google.android.gms:play-services:9.2.1'
     testCompile 'junit:junit:4.12'
 }
+
+apply plugin: 'com.google.gms.google-services'
