--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ERActivity" />
+        <activity android:name=".controller.ERActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -38,7 +38,7 @@
             android:value="@string/google_maps_key" />
 
 
-        <activity android:name=".Backoffice"></activity>
+        <activity android:name=".controller.Backoffice"></activity>
     </application>
 
 </manifest>
