--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     compile('com.mikepenz:materialdrawer:5.0.0@aar') {
         transitive = true
     }
+    compile 'com.squareup.picasso:picasso:2.5.2'
 
 //    compile 'com.android.support:multidex:1.0.0'
 }
