--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,12 +23,9 @@
         android:largeHeap="true"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".controller.ERActivity" />
         <activity
             android:name=".MainActivity"
-            android:theme="@style/Theme.AppCompat.NoActionBar">
-
-        </activity>
+            android:theme="@style/Theme.AppCompat.NoActionBar"></activity>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -43,7 +40,6 @@
 
         <!-- <meta-data android:name="android.support.multidex.MultiDexApplication"/> -->
 
-        <activity android:name=".controller.Backoffice" />
         <activity android:name=".controller.RequestAmbulance" />
         <activity android:name=".SignIn">
             <intent-filter>
@@ -53,7 +49,11 @@
             </intent-filter>
         </activity>
         <activity android:name=".SignUp" />
-        <activity android:name=".AboutUs"></activity>
+        <activity android:name=".AboutUs" />
+        <activity
+            android:name=".firstaid.DetailedActivity"
+            android:label="@string/title_activity_first_aid"
+            android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
