--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "24.0.0"
     defaultConfig {
         applicationId "com.example.android.graduationdemo"
-        minSdkVersion 10
+        minSdkVersion 14
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -26,13 +26,27 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.android.support:cardview-v7:23.3.+'
+    compile 'com.android.support:design:23.4.0'
+    compile 'com.android.support:cardview-v7:23.4.0'
     compile 'com.google.android.gms:play-services:9.2.1'
     testCompile 'junit:junit:4.12'
     compile('com.mikepenz:materialdrawer:5.0.0@aar') {
         transitive = true
     }
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.ms-square:expandableTextView:0.1.4'
+    compile 'me.grantland:autofittextview:0.2.+'
+    compile 'com.daimajia.easing:library:2.0@aar'
+    compile 'com.daimajia.androidanimations:library:2.2@aar'
+    compile 'com.github.florent37:materialviewpager:1.2.1'
+    compile 'com.flaviofaria:kenburnsview:1.0.7'
+    compile 'com.jpardogo.materialtabstrip:library:1.1.0'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.basgeekball:awesome-validation:1.0'
+    compile 'com.mobsandgeeks:android-saripaar:2.0.0'
+    compile 'com.github.traex.rippleeffect:library:1.3'
+    compile 'com.github.dmytrodanylyk.circular-progress-button:library:1.1.3'
+    compile 'com.github.manuelpeinado.fadingactionbar:fadingactionbar:3.1.2'
 
 //    compile 'com.android.support:multidex:1.0.0'
 }
