--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:theme="@style/Theme.AppCompat.NoActionBar"></activity>
+            android:theme="@style/Theme.AppCompat.NoActionBar" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -41,19 +41,27 @@
         <!-- <meta-data android:name="android.support.multidex.MultiDexApplication"/> -->
 
         <activity android:name=".controller.RequestAmbulance" />
-        <activity android:name=".SignIn">
+        <activity
+            android:name=".SignIn"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SignUp" />
+        <activity
+            android:name=".SignUp"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity android:name=".AboutUs" />
         <activity
             android:name=".firstaid.DetailedActivity"
             android:label="@string/title_activity_first_aid"
-            android:theme="@style/AppTheme"></activity>
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+        <activity android:name=".view.FirstAidActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            />
+
     </application>
 
 </manifest>
