--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-//        multiDexEnabled  true
+        multiDexEnabled  true
     }
     buildTypes {
         release {
@@ -48,7 +48,12 @@ dependencies {
     compile 'com.github.dmytrodanylyk.circular-progress-button:library:1.1.3'
     compile 'com.github.manuelpeinado.fadingactionbar:fadingactionbar:3.1.2'
 
-//    compile 'com.android.support:multidex:1.0.0'
+    compile 'com.android.support:multidex:1.0.0'
+    android {
+        dexOptions {
+            jumboMode = true
+        }
+    }
 }
 
 apply plugin: 'com.google.gms.google-services'
